--- a/package.json
+++ b/package.json
@@ -4,25 +4,36 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --base-href .",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron:serve": "electron src/electron/entry.live.js",
+    "postinstall": "cpx common.js node_modules/@angular/cli/models/webpack-configs"
   },
+  "main": "bin/main.js",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.3.2",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "download": "^6.2.5",
+    "electron-json-storage": "^3.0.7",
+    "material-design-lite": "^1.3.0",
+    "mv": "^2.1.1",
+    "rimraf": "^2.6.1",
     "rxjs": "^5.4.1",
+    "scrape-it": "^3.3.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -33,6 +44,10 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "cpx": "^1.5.0",
+    "electron": "^1.6.11",
+    "electron-log": "^2.2.7",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
